--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "vue-tsc": "^2.0.24"
     },
     "dependencies": {
-        "@savaryna/tailwindcss-material-symbols": "^1.0.3",
+        "@iconify/vue": "^4.2.0",
         "@tailwindcss/typography": "^0.5.15",
         "naive-ui": "^2.40.3",
         "pinia": "^2.3.0",
