--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.7.4",
+        "axios": "^1.7.9",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@iconify/vue": "^4.2.0",
+        "@pipedream/sdk": "^1.1.3",
         "@tailwindcss/typography": "^0.5.15",
         "naive-ui": "^2.40.3",
         "pinia": "^2.3.0",
