--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "masbug/flysystem-google-drive-ext": "^2.4",
+        "spatie/flysystem-dropbox": "^3.0",
         "stancl/tenancy": "^3.8",
         "tightenco/ziggy": "^2.0"
     },
