--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@iconify/vue": "^4.2.0",
         "@pipedream/sdk": "^1.1.3",
         "@tailwindcss/typography": "^0.5.15",
+        "dayjs": "^1.11.13",
         "naive-ui": "^2.40.3",
         "pinia": "^2.3.0",
         "pinia-plugin-persistedstate": "^4.1.3"
