--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "@iconify/vue": "^4.2.0",
         "@pipedream/sdk": "^1.1.3",
         "@tailwindcss/typography": "^0.5.15",
+        "@vueuse/core": "^12.5.0",
+        "cronstrue": "^2.54.0",
         "dayjs": "^1.11.13",
         "naive-ui": "^2.40.3",
         "pinia": "^2.3.0",
